fixed the message overflow

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@ h3 {
   font-size: 25px;
 }
 
+p {
+  word-break: break-all;
+}
+
 .thought-form {
   background-color: #ebebeb;
   border: 1px solid rgb(105,105,105);
